dev : Logout implementation
